chore: developer friendly error messages

--- a/docs/website/content/docs/index.mdx
+++ b/docs/website/content/docs/index.mdx
@@ -125,7 +125,7 @@ If everything is wired correctly, deprecated/limited APIs are reported like this
 const date = new Date();
 const year = date.getYear();
              ^^^^^^^^^^^^^^^
-Feature 'date-get-year-set-year' is not a widely available Baseline feature. // [!code error]
+Feature 'getYear()' is not a widely available Baseline feature. // [!code error]
 ```
 
 
