--- a/docs/website/content/docs/examples.mdx
+++ b/docs/website/content/docs/examples.mdx
@@ -56,7 +56,7 @@ export default [
 
   // Baseline: defaults to "widely"; override via function argument if needed.
   // Level defaults to "error"; switch to "warn" by passing level.
-  ...baselineJs.configs.recommended({ available: BASELINE.WIDELY, level: "warn" }),
+  baselineJs.configs.recommended({ available: BASELINE.WIDELY, level: "warn" }),
 ];
 ```
 
@@ -90,7 +90,7 @@ export default [
   },
 
   // Baseline + type-aware detection
-  ...baselineJs.configs["recommended-ts"]({ available: BASELINE.WIDELY, level: "error" }),
+  baselineJs.configs["recommended-ts"]({ available: BASELINE.WIDELY, level: "error" }),
 ];
 ```
 
@@ -157,7 +157,7 @@ export default [
   // JavaScript (JS/TS)
   // Broad coverage with minimal config: Web APIs and JS builtins on preset: "auto".
   { plugins: { "baseline-js": baselineJs } },
-  ...baselineJs.configs.recommended({ available: BASELINE.WIDELY, level: "error" }),
+  baselineJs.configs.recommended({ available: BASELINE.WIDELY, level: "error" }),
 
   // CSS
   {
