--- a/docs/website/content/docs/examples.mdx
+++ b/docs/website/content/docs/examples.mdx
@@ -226,5 +226,5 @@ module.exports = {
 ```
 
 <Callout type="info" title="Tip: constants">
-文字列の代わりに <code>BASELINE.WIDELY/NEWLY</code> を使うとタイプミスを防げます。
+Prefer <code>BASELINE.WIDELY/NEWLY</code> over string literals to avoid typos.
 </Callout>
